# flask-go

./: .flaskenv.template  .gitignore  pyproject.toml
application/: __init__.py  routes.py
application/templates/: index.html  translator.html
