[project]
name = "microblog"
version = "0.1.0"
description = "Learn Flask web framework from scratch."
authors = [
    {name = "Guanjie",email = "gjsun@666.com"}
]
readme = "README.md"
requires-python = "3.12.0"
dependencies = [
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
